fix(filter): fix question filter

--- a/app/assets/stylesheets/user_category.css.scss
+++ b/app/assets/stylesheets/user_category.css.scss
@@ -58,3 +58,12 @@
     background-color: whitesmoke;
     left: 74px;
 }
+
+.unselect {
+    display: block !important;
+    position: static !important;
+    background-color: #fff !important;
+    background: #fff !important;
+    border-radius: 0px !important;
+
+}
