--- a/app/views/layouts/_rightpanel.html.erb
+++ b/app/views/layouts/_rightpanel.html.erb
@@ -17,13 +17,13 @@
                             <div class="bar"></div>
                         </div>
                         <i class="check circle green icon"></i>
-                        <a class="done">Creat your profile</a>
+                        <a class="">Creat your profile</a>
                     </div>
                 </div>
                 <div class="item">
                     <div class="content">
                         <i class="check circle green icon"></i>
-                        <a class="done">Write Profile Bio</a>
+                        <a class="">Write Profile Bio</a>
                     </div>
                 </div>
                 <div class="item">
