--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,12 +16,8 @@
  html.turbolinks-progress-bar::before {
    background-color: red !important;
    height: 5px !important;
+   font-family: 'Open Sans', sans-serif;
  }
-/*.alex {
-    width: 100%;
-    height: 100%;
-    background: url('http://forbetterweb.com/html/hybrid/1.4/img/header.jpg');
-}*/
 
 
 .ui.fixed.menu+.ui.grid {
@@ -54,6 +50,7 @@
 
 body {
   background: #eceff1 !important;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
