--- a/app/views/layouts/display.html.erb
+++ b/app/views/layouts/display.html.erb
@@ -24,6 +24,8 @@
       <meta name="msapplication-TileColor" content="#ffffff">
       <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
       <meta name="theme-color" content="#ffffff">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+      
   </head>
   <body>
     <% if current_user %>
