feat(): add point to user progress when they answer question

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
 
-<div class="ui page grid">
+<div class="ui page grid" style="margin-top: 4rem !important;">
   <div class="ui top fixed small menu computer tablet only row" style="padding: 0px;">
     <div class="ui stacked container">
       <div class="align-logo">
@@ -42,4 +42,16 @@
     </div>
   </div>
 
+</div>
+
+
+
+<div class="ui page grid">
+  <div class="ui top fixed small menu mobile only row" style="padding: 0px;">
+    <div class="ui stackable mobile-container" style="margin: 0px auto">
+      <div class="align-logo" align="center">
+        <%=  (image_tag ("http://res.cloudinary.com/sportbay-co/image/upload/c_crop/v1478176357/Favicon/apple-icon-60x60.png"), class: "big  sidebar icon", width:"50px", style: "border-radius: 50%;") %>
+      </div>
+    </div>
+  </div>
 </div>
