--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -14,7 +14,7 @@ a:hover {
 
 
 .ui.grid+.grid {
-  margin-top: 7rem !important;
+  margin-top: 2rem !important;
 }
 
 .top-header {
@@ -380,3 +380,47 @@ pre {
 body.pushable>.pusher {
   background: #eceff1;
 }
+
+.content-panel {
+  background: #FAFAFA !important;
+  .header {
+    font-weight: 200 !important;
+  }
+  p {
+    font-size: 12px !important;
+    margin-top: 10px !important;
+  }
+}
+
+
+progress {
+/* style rules */
+-webkit-appearance: none;
+   appearance: none;
+
+ background: red;
+ appearance: none;
+ border: none;
+ width: 100%;
+ height: 20px;
+ box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
+progress::-webkit-progress-bar {
+/* style rules */
+    background: #43c5d0;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15) inset;
+}
+progress::-webkit-progress-value {
+/* style rules */
+background: #43c5d0;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15) inset;
+}
+progress::-moz-progress-bar {
+/* style rules */
+background: #43c5d0;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15) inset;
+}
+
+progress:not { background-color: #000000; }
