--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,18 +1,7 @@
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-1 col-xs-3 col-sm-2 logo "></div>
-      <div class="col-lg-8 col-xs-9 col-sm-5 "> &copy; 2015 Onozor, Inc.</div>
-      <div class="col-lg-3 col-xs-12 col-sm-5 sociconcent">
-        <ul class="socialicons">
-          <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-          <li><a href="#"><i class="fa fa-cloud"></i></a></li>
-          <li><a href="#"><i class="fa fa-rss"></i></a></li>
-        </ul>
-      </div>
-    </div>
+<div class="ui question  card fluid">
+  <div class="items ui content footer-settings">
+    <p>&copy; <%= Time.now.year %>  Onozor Interactive.</p>
+    <p>Changelog Report 2015 Feedback</p>
+    <p>Feature Requests Terms Privacy</p>
   </div>
-</footer>
+</div>
