--- a/app/views/layouts/_rightpanel.html.erb
+++ b/app/views/layouts/_rightpanel.html.erb
@@ -86,9 +86,9 @@
     </div>
 <% end %>
 
+<%= render partial: "layouts/footer" %>
 
-
-    <div class="ui card  fluid">
+    <!-- <div class="ui card  fluid">
         <div class="ui middle aligned selection list">
             <div class="item">
                 <i class="idea icon"></i>
@@ -116,4 +116,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
