--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -453,3 +453,9 @@ progress:not { background-color: #000000; }
     border: 1px solid rgba(0,0,0,.1) !important;
   }
 }
+
+.ui.card {
+  border-radius: 0px !important;
+  border: 1px solid #E0E0E0 !important;
+  box-shadow: 0 1px 2px #E0E0E0 !important;
+}
