--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       <meta name="theme-color" content="#ffffff">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
    </head>
-  <body data-no-turbolink>
+  <body >
 
   <% if current_user %>
    <div class="ui sidebar right inverted vertical menu">
