feat(): add meta view port for all layout

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -6,6 +6,7 @@
       <%= csrf_meta_tags %>
       <%= stylesheet_link_tag  'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.0/semantic.min.css', 'application', media: "all", "data-turbolinks-track" => true %>
       <%= javascript_include_tag  'application', "data-turbolinks-track" => true %>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <style type="text/css">
            .grid {
