--- a/app/views/layouts/display.html.erb
+++ b/app/views/layouts/display.html.erb
@@ -6,7 +6,7 @@
       <%= csrf_meta_tags %>
       <%= stylesheet_link_tag  'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.0/semantic.min.css', 'application', media: "all", "data-turbolinks-track" => true %>
       <%= javascript_include_tag  'application', "data-turbolinks-track" => true %>
-
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="apple-touch-icon" sizes="57x57" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-57x57.png">
       <link rel="apple-touch-icon" sizes="60x60" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-60x60.png">
       <link rel="apple-touch-icon" sizes="72x72" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/apple-icon-72x72.png">
@@ -25,7 +25,7 @@
       <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
       <meta name="theme-color" content="#ffffff">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-      
+
   </head>
   <body>
     <% if current_user %>
