--- a/app/views/layouts/_app_sidenav.html.erb
+++ b/app/views/layouts/_app_sidenav.html.erb
@@ -3,7 +3,7 @@
    <% if current_user %>
      <div class="ui fluid category  search">
       <div class="ui left icon input" style="margin-bottom: 15px;">
-        <input class="prompt" type="text" placeholder="Add Category" style="box-shadow: 0 1px 2px 0 rgba(34,36,38,.15); width:100%; border: none; border-bottom: 1px solid #ccc !important; border-radius: 0px; height: 48px;">
+        <input class="prompt" type="text" placeholder="Add categories" style="box-shadow: 0 1px 2px 0 rgba(34,36,38,.15); width:100%; border: none; border-bottom: 1px solid #ccc !important; border-radius: 0px; height: 48px;">
         <i class="add plus icon"></i>
       </div>
      </div>
