--- a/app/views/layouts/_mini_nav.html.erb
+++ b/app/views/layouts/_mini_nav.html.erb
@@ -1,6 +1,6 @@
 <div class="ui fluid stackable labeled icon massive three item menu">
   <%= link_to "<i class='plus square outline icon'></i> Ask Question".html_safe, new_question_path,  class:"item" %>
-  <a class="item"><i class="write icon"></i>Write A Story</a>
+  <a class="item" href="../coming_soon/index"><i class="write icon"></i>Write A Story</a>
 
     <div class="ui dropdown item">
       <i class="filter icon"></i> Filters <i class="dropdown icon"></i>
