--- a/app/views/coming_soon/index.html.erb
+++ b/app/views/coming_soon/index.html.erb
@@ -30,7 +30,7 @@
         <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a></p>
         <h1 class="text-center"><%= link_to (image_tag "logo-icon.png"), root_path %></h1>
         <h1 class="cursive">Comming soon</h1>
-        <h2 class="sub">We are working on giving you a awesome bloging expirence.</h2>
+        <h2 class="sub">We are working on giving you an awesome blogging expirence.</h2>
         <div class="mailing-list">
           <h3 class="mailing-list-heading">Join our mailing list and we will notify you once it is ready!</h3>
           <div class="row">
