--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,30 +37,9 @@
    </div>
   <% end %>
       <div class="pusher">
-        <%= render partial: 'layouts/nav' %>
-      <% unless current_user %>
-        <div class="ui stackable ui tall stacked segment container one column top-header" >
-          <div class="padding-settings">
-            <h1 class="ui center aligned icon header dash_header" style="color: #fff; font-size: 32px;">
-              Where Everyone meet
-            </h1>
-            <div class="ui stackable center aligned vertically  grid">
-            <div class="eight wide  column">
-              <h4>An open, friendly and conversational community for everyone</h4>
-              <a class="ui large right call-modal labeled blue icon button" style='margin-top: 30px' href="#">
-                <i class="right chevron icon"></i>
-                Get Started Now
-              </a>
-              <div>
-
-            </div>
-            </div>
-          </div>
-         </div>
-        </div>
-    <% end %>
+      <%= render partial: 'layouts/nav' %>
       <%= render partial: 'layouts/flash_messages/flash' %>
-    <div class="ui stackable container three column grid left-menu">
+    <div class="ui stackable container three column grid margin-top-for-web left-menu">
       <%= render :partial => "layouts/app_sidenav" %>
       <div class="nine wide column">
         <%= render :partial => 'layouts/mini_nav' %>
