feat(): remove heade for all pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
   <% end %>
       <div class="pusher">
       <%= render partial: 'layouts/nav' %>
+      <%= render partial: "layouts/header" %>
       <%= render partial: 'layouts/flash_messages/flash' %>
     <div class="ui stackable container three column grid margin-top-for-web left-menu">
       <%= render :partial => "layouts/app_sidenav" %>
