feat(): remove heade for all pages

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,4 @@
-<div class="ui stackable container three column grid left-menu">
+<div class="ui stackable container three margin-top-for-web column grid left-menu">
   <div class="eleven wide column">
    <div class="ui card fluid">
     <div class="ui link content">
