--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -36,40 +36,10 @@
             </div>
 
           <h2 class="ui  header"></h2>
-          <!-- <div class="field">
-            <label>Tag your question</label>
-            <div class="ui fluid multiple search selection dropdown">
-              <input type="hidden" name="receipt">
-              <i class="dropdown icon"></i>
-              <div class="default text">Select tags</div>
-              <div class="menu">
-                <div class="item" data-value="jenny" data-text="Jenny">
-                  <img class="ui mini avatar image" src="/images/avatar/small/jenny.jpg">
-                  Jenny Hess
-                </div>
-                <div class="item" data-value="elliot" data-text="Elliot">
-                  <img class="ui mini avatar image" src="/images/avatar/small/elliot.jpg">
-                  Elliot Fu
-                </div>
-                <div class="item" data-value="stevie" data-text="Stevie">
-                  <img class="ui mini avatar image" src="/images/avatar/small/stevie.jpg">
-                  Stevie Feliciano
-                </div>
-                <div class="item" data-value="christian" data-text="Christian">
-                  <img class="ui mini avatar image" src="/images/avatar/small/christian.jpg">
-                  Christian
-                </div>
-                <div class="item" data-value="matt" data-text="Matt">
-                  <img class="ui mini avatar image" src="/images/avatar/small/matt.jpg">
-                  Matt
-                </div>
-                <div class="item" data-value="justen" data-text="Justen">
-                  <img class="ui mini avatar image" src="/images/avatar/small/justen.jpg">
-                  Justen Kitsune
-                </div>
-              </div>
-            </div>
-          </div> -->
+          <div class="field">
+            <%= f.label :tag_list, "Tags (separated by commas)" %><br />
+            <%= f.text_field :tag_list %>
+          </div>
 
     <h2 class="ui  header"></h2>
          <div class="ui segment">
@@ -80,7 +50,7 @@
             </div>
           </div>
         </div>
-        <button class="ui button green huge"><i class="  military icon"></i>Submit</button>
+        <button class="ui button green huge"><i class="military icon"></i>Submit</button>
         </div>
         <% end %>
       </div>
