--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -21,6 +21,10 @@
 
         <div class="content">
           <h1><%= (@question.name) %></h1>
+          <h1 class="header">
+            <%= raw @question.tag_list.map { |t| link_to t, tag_path(t), class:"ui  tag label" }.join(' ') %>
+
+          </h1>
           <div class="description answer">
              <%=image_tag (@question.picture.url(:thumb)), class: "question-title" if @question.picture.present? %>
              <%=  markdown(@question.body).html_safe %>
