--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -645,13 +645,22 @@ progress:not { background-color: #000000; }
       display: flex;
       float: left;
       width: 100px;
-
+      padding: 0px 10px;
       i {
         cursor: pointer;
         margin: 10px 5px;
         font-size: 20px;
         color: #90A4AE;
         font-weight: lighter;
+      }
+    }
+
+    .notification-bell {
+      position: relative;
+      .notification-label {
+        position: absolute !important;
+        top: 5px !important;
+        right: 67px !important;
       }
     }
 
