--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -39,22 +39,21 @@
 <div class="mobile-header mobile-only">
   <div class="header-wrap">
     <div class="left-column">
-      <i style="cursor: pointer;" class="sidebar icon"></i>
+
+      <!-- <i style="cursor: pointer;" class=""></i> -->
+
       <%= link_to (image_tag ("http://res.cloudinary.com/sportbay-co/image/upload/c_crop/v1478176357/Favicon/apple-icon-60x60.png"), width:"35px", style: "border-radius: 100%"), root_url, turbolinks: false %>
     </div>
   <% if current_user %>
     <div class="right-column">
       <ul>
-        <li><a href="#"><i class="icon search"></i></a></li>
+      <li id="search-mobile"><a href="#"><i class="icon search" ></i></a></li>
         <li>
-          <%= link_to '<i class="bell outline icon"></i>'.html_safe, activities_path %>
-          <% if user_signed_in? %>
-              <% if current_user.activities.unseen.count > 0 %>
-                <span class="badge badge-danger"><%= current_user.activities.unseen.count  %></span>
-              <% end %>
+          <%= link_to(activities_path, class: 'notification-bell') do %>
+            <i class="bell outline icon"></i>
+            <a class="ui red circular tiny label notification-label" style="position: absolute !important; top: 5px !important; right: 67px !important;"><%= current_user.activities.unseen.count if user_signed_in? && current_user.activities.unseen.count > 0  %></a>
           <% end %>
         </li>
-
         <li><%=link_to (image_tag current_user.avatar.url(:thumb), class:'ui mini circular image'), current_user  %></li>
       </ul>
     </div>
