--- a/app/assets/stylesheets/user_category.css.scss
+++ b/app/assets/stylesheets/user_category.css.scss
@@ -67,3 +67,14 @@
     border-radius: 0px !important;
 
 }
+
+
+.notifcation {
+  .bell {
+    font-size: x-large !important;
+  }
+  .label {
+    position: absolute;
+    top: 10px;
+  }
+}
