--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -498,7 +498,7 @@ progress:not { background-color: #000000; }
 
   }
   .margin-top-for-web {
-    margin-top: 20px !important;
+    padding: 20px !important;
   }
 
   .timeline-details {
